Update TODO file

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,11 +8,8 @@
   - Total income for month
   - Total expenses for month
   - Total profits (income - expenses)
-* Budget information for expense list
-  - Stored in Gnucash note (I don't like the builtin Gnuash budgets)
-* Expense vs budget progress bar
-  - Like Mint's (https://lh3.ggpht.com/30zM8zdzWGs9oBAUds9FoGFRm4SUUBgSuirAazZaE0o7svIICkwqYh6-qCj5FkHjyGM=h900)
-* Create dashboards for other things and transition between them
+* Create dashboards for other things and transition between them (in which case
+  this wouldn't be strictly a financial dashboard)
   - Calendar
   - News and Weather
   - Fitbit stats
